--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -12,6 +12,8 @@
     --button-color: #393a4b;
     --bg-main: #fafafa;
     --bg-tarefas: #fff;
+    --box-shadow: 0px 35px 50px -15px rgba(194, 195, 214, 0.50);
+
 }
 
 header {
@@ -70,4 +72,27 @@ main {
 
 .tarefas {
     background: var(--bg-tarefas);
+    box-shadow: var(--box-shadow);
+    border-radius: 0.3125rem;
+    margin-top: -1.5rem;
+}
+
+.tarefas .tarefa {
+    padding: 1rem 1.25rem;
+}
+
+.tarefa form {
+    display: flex;
+    justify-content: space-between;
+}
+
+.tarefa div {
+    display: flex;
+    align-items: center;
+    gap: 0.75rem;
+}
+
+.tarefa button {
+    border: none;
+    background: none;
 }
