término dos ajustes do mobile para o tema light

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -45,4 +45,10 @@
             <a href="">Limpar tarefas</a>
         </div>
     </section>
+
+    <section class="botoes">
+        <a href="">Todas</a>
+        <a href="">Ativas</a>
+        <a href="">Completas</a>
+    </section>
 </main>
