--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -18,6 +18,11 @@
     --info-text-color: #9495a5;
 }
 
+header > div {
+    max-width: 33.75rem;
+    margin-inline: auto;
+}
+
 body {
     background: var(--bg-body);
 }
@@ -32,7 +37,7 @@ header {
     padding: 3rem 1.75rem 0;
 }
 
-header div {
+header div div {
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -80,6 +85,8 @@ main {
     box-shadow: var(--box-shadow);
     border-radius: 0.3125rem;
     margin-top: -1rem;
+    max-width: 33.75rem;
+    margin-inline: auto;
 }
 
 .tarefas .tarefa {
@@ -124,11 +131,17 @@ main {
     color: var(--info-text-color);
 }
 
+.informacoes .botoes {
+    display: none;
+}
+
 .botoes {
     padding-block: 1rem;
     background: var(--bg-tarefas);
     border-radius: 0.3125rem;
     margin-top: 1rem;
+    max-width: 33.35rem;
+    margin-inline: auto;
 
     display: flex;
     justify-content: center;
@@ -136,3 +149,28 @@ main {
     font-size: 0.875rem;
 }
 
+@media(min-width: 1000px) {
+    section.botoes {
+        display: none;
+    }
+
+    .informacoes .botoes {
+        display: flex;
+        padding: 0;
+        margin: 0;
+        gap: 2rem;
+    }
+    .tarefa button {
+        visibility: hidden;
+    }
+
+    .tarefa input:hover,
+    .tarefa label:hover,
+    .tarefa button:hover {
+        cursor: pointer;
+    }
+
+    .tarefa:hover button {
+        visibility: initial;
+    }
+}
