--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -12,14 +12,16 @@
 <body>
     <header>
         <div>
+            <div>
             <h1>To Do</h1>
             <img src="/imagens/moon-icon.png" alt="ícone de lua">
-        </div>
+            </div>
 
-        <form action="">
+            <form action="">
             <input type="text" id="nova-tarefa" placeholder="Criar uma nova tarefa" name="novaTarefa">
             <button type="submit">Criar</button>
-        </form>
+            </form>
+        </div>
     </header>
 
     {{{body}}}
