--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -10,9 +10,10 @@
     --bg-header-desktop: url(../imagens/bg-header-desktop-light.png);
     --input-box-shadow: rgba(194, 195, 214, 0.50);
     --input-color: #494c6b;
+    --input-bg: #fff;
     --placeholder-color: #D1D2DA;
-    --button-color: #393a4b;
-    --button-color-hover: #494c6b;
+    --button-color: #494c6b;
+    --button-color-hover: #393a4b ;
     --bg-body: #fafafa;
     --bg-tarefas: #fff;
     --box-shadow: 0px 35px 50px -15px rgba(194, 195, 214, 0.50);
@@ -21,6 +22,26 @@
     --info-text-color: #9495a5;
     --infor-button-hover: #494c6b;
     --info-button-active: #3a7cfd;
+}
+
+body.dark {
+    --bg-header-mobile: url(../imagens/bg-header-mobile-dark.png);
+    --bg-header-desktop: url(../imagens/bg-header-desktop-dark.png);
+    --input-box-shadow: rgba(0, 0, 0, 0.50);;
+    --input-color: #C8CBE7;
+    --input-bg: #25273d;
+    --placeholder-color: #767992;
+    --button-color: #25273d;
+    --button-color-hover: #5b5e7e;
+    --bg-body: #171823;
+    --bg-tarefas: #25273d;
+    --box-shadow: 0px 35px 50px -15px rgba(0, 0, 0, 0.50);
+    --border-color: #393a4b;
+    --text-color: #c8cbe7;
+    --info-text-color: #5b5e7e;
+    --infor-button-hover: #e3e4f1;
+    --info-button-active: #3a7cfd;
+
 }
 
 header > div {
@@ -69,6 +90,7 @@ header form input {
     outline: none;
     font-size: 0.75rem;
     color: var(--input-color);
+    background: var(--input-bg);
 }
 
 header form input::placeholder{
