--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -19,6 +19,7 @@
     --box-shadow: 0px 35px 50px -15px rgba(194, 195, 214, 0.50);
     --border-color: #e3e4f1;
     --text-color: #494C6B;
+    --todo-complete-color: #D1D2DA;
     --info-text-color: #9495a5;
     --infor-button-hover: #494c6b;
     --info-button-active: #3a7cfd;
@@ -38,6 +39,7 @@ body.dark {
     --box-shadow: 0px 35px 50px -15px rgba(0, 0, 0, 0.50);
     --border-color: #393a4b;
     --text-color: #c8cbe7;
+    --todo-complete-color: #4D5067;
     --info-text-color: #5b5e7e;
     --infor-button-hover: #e3e4f1;
     --info-button-active: #3a7cfd;
@@ -131,6 +133,11 @@ main {
 
 .tarefas .tarefa + .tarefa {
     border-top: 1px solid var(--border-color);
+}
+
+.completa label {
+    text-decoration: line-through;
+    color: var(--todo-complete-color);
 }
 
 .tarefa form {
